# RiemannConquer

./: CMakeLists.txt  Kernel.cpp  Kernel.h  Library.cpp  Library.h  ProofGraph.cpp  ProofGraph.h  README.md  Search.cpp  Search.h  TypeTerm.cpp  TypeTerm.h  Unification.cpp  Unification.h  main.cpp
